--- a/src/index.css
+++ b/src/index.css
@@ -1,24 +1,30 @@
 html {
-    overflow: hidden;
     width: 100%;
     font-family: 'Press Start 2P', cursive;
     color: white;
 }
 
 body {
-    width: 100%;
     background-color: #282828;
     color: white;
-    margin: 0;
+    margin: 50px 200px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
+p {
+    line-height: 1.5;
+}
+
 .header {
-    margin-top: 100px;
+    margin-top: 50px;
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.introduction {
+    margin: 50px 0;
 }
