--- a/index.css
+++ b/index.css
@@ -7,7 +7,8 @@ html {
 body {
     background-color: #282828;
     color: white;
-    margin: 50px 200px;
+    margin: 50px auto;
+    width: 600px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -31,4 +32,17 @@ footer {
 
 .introduction {
     margin: 50px 0;
+}
+
+.sketch {
+    margin: 10px 0;
+}
+
+.canvas {
+    display: block;
+}
+
+.option {
+    display: inline-block;
+    margin: 10px 10px 0 0;
 }
