--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,10 @@ p {
     line-height: 1.5;
 }
 
+a {
+    color: #9CFC97;
+}
+
 footer {
     margin-top: 50px;
 }
@@ -39,14 +43,28 @@ footer {
     width: 600px;
 }
 
+.sketch.small {
+    width: 400px;
+}
+
 .sketch {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
+.row {
+    display: flex;
+}
+
 .canvas {
     display: block;
+}
+
+.link {
+    display: flex;
+    align-items: center;
+    color: #9CFC97;
 }
 
 .option {
