added github link, closes #2

--- a/src/index.css
+++ b/src/index.css
@@ -67,7 +67,49 @@ footer {
     color: #9CFC97;
 }
 
+.icon {
+    margin: 0;
+    align-self: flex-end;
+    width: 42px;
+    height: 42px;
+}
+
 .option {
     display: inline-block;
     margin: 10px 10px 0 0;
+}
+
+.tooltip {
+    position: relative;
+    display: inline-block;
+}
+
+.tooltip .tooltiptext {
+    visibility: hidden;
+    width: 120px;
+    color: #fff;
+    text-align: center;
+    position: absolute;
+    z-index: 1;
+    bottom: -100%;
+    left: 50%;
+    margin-left: -60px;
+    opacity: 0;
+    transition: opacity 0.3s;
+}
+
+.tooltip .tooltiptext::before {
+    content: "";
+    position: absolute;
+    bottom: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: transparent transparent #FFF transparent;
+}
+
+.tooltip:hover .tooltiptext {
+    visibility: visible;
+    opacity: 1;
 }
