--- a/src/index.css
+++ b/src/index.css
@@ -61,10 +61,21 @@ footer {
     display: block;
 }
 
+.linkWrapper {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    margin: 1rem 0 2rem 0;
+}
+
 .link {
     display: flex;
     align-items: center;
     color: #9CFC97;
+}
+
+.link > * {
+    padding: 0 5px;
 }
 
 .icon {
